# wingman

./: .dockerignore  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.py
.github/workflows/: deploy.yml
backend/: main.py  wingman.py  wingman_tools.py
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AgentPanel.tsx  AppHeader.tsx  BlockCursorTextarea.tsx  ChatMessage.tsx  ChatPanel.tsx  CommandPalette.tsx  GraphDiagram.tsx  LoadSessionModal.tsx  providers.tsx
frontend/components/ui/: animated-section.tsx  glass-card.tsx  splash-screen.tsx  theme-toggle.tsx
frontend/lib/: api.ts  theme.ts  types.ts
gradio_app/: app.py  sidekick.py
notebooks/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb
sandbox/: pi.ts
scripts/: deploy.sh  setup-state-bucket.sh
terraform/: apigateway.tf  cloudfront.tf  dynamodb.tf  ecr.tf  iam.tf  lambda.tf  main.tf  outputs.tf  s3.tf  terraform.tfvars.example  variables.tf
